# owocryptor

./: .gitignore  Makefile  README.md  encrypt_desktop_files.py  encrypt_desktop_files.spec  owocryptor.py  owocryptor.spec  pyproject.toml
sampledata/: data1.csv  lorem.txt
tests/: test_basic.py
