[tool.poetry]
name = "encryption-program"
version = "0.1.0"
description = ""
authors = ["Henry Post <henryfbp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
cryptography = "^41.0.1"
pyinstaller = "^5.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
